# mapget

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  deps.cmake  pyproject.toml  schema.json
.github/scripts/: validate_version.py
.github/workflows/: ci-deploy.yaml  cmake.yaml  coverage.yml  deploy.yaml
apps/mapget/: CMakeLists.txt
apps/mapget/src/: mapget.cpp
cmake/: deps.cmake  sqlite.cmake
config/: sample-fetch.ini  sample-serve.ini
docs/: mapget-api.md  mapget-cache.md  mapget-config.md  mapget-dev-guide.md  mapget-model.md  mapget-setup.md  mapget-simfil-extensions.md  mapget-user-guide.md
docs/size-comparison/: compress.bash  convert.py  table.md  tile.bson  tile.json  tile.msgpack
examples/: CMakeLists.txt
examples/config/: sample-first-datasource.toml  sample-first-datasource.yaml  sample-second-datasource.toml  sample-second-datasource.yaml  sample-service.toml  sample-service.yaml
examples/cpp/http-datasource/: CMakeLists.txt  main.cpp  sample_datasource_info.json
examples/cpp/local-datasource/: CMakeLists.txt  main.cpp
examples/cpp/minimal-http-service/: CMakeLists.txt  main.cpp
examples/python/: datasource.py
libs/datasource/: CMakeLists.txt
libs/datasource/include/mapget/datasource/: datasource.h  server.h
libs/datasource/src/: datasource.cpp  server.cpp
libs/geojsonsource/: CMakeLists.txt
libs/geojsonsource/include/geojsonsource/: geojsonsource.h
libs/geojsonsource/src/: geojsonsource.cpp
libs/gridsource/: CMakeLists.txt
libs/gridsource/include/gridsource/: gridsource.h
libs/gridsource/src/: gridsource.cpp
libs/http-datasource/: CMakeLists.txt
libs/http-datasource/include/mapget/detail/: http-server.h
libs/http-datasource/include/mapget/http-datasource/: datasource-client.h  datasource-server.h
libs/http-datasource/src/: datasource-client.cpp  datasource-server.cpp  http-server.cpp
libs/http-service/: CMakeLists.txt  default_config_schema.json
libs/http-service/include/mapget/http-service/: cli.h  http-client.h  http-service.h
libs/http-service/src/: cli.cpp  http-client.cpp  http-service.cpp
libs/logging/: CMakeLists.txt
libs/logging/include/: log.h
libs/logging/include/mapget/: log.h
libs/logging/src/: log.cpp
libs/model/: CMakeLists.txt
libs/model/include/mapget/model/: attr.h  attrlayer.h  blob.h  bloblayer.h  feature.h  featureid.h  featurelayer.h  fields.h  geometry.h  hash.h  info.h  layer.h  point.h  pointnode.h  relation.h  simfil-geometry.h  simfilgeometry.h  simfilutil.h  sourcedata.h  sourcedatalayer.h  sourcedatareference.h  sourceinfo.h  stream.h  stringpool.h  tileid.h  validity.h
libs/model/src/: attr.cpp  attrlayer.cpp  blob.cpp  bloblayer.cpp  feature.cpp  featureid.cpp  featurelayer.cpp  fields.cpp  geometry.cpp  info.cpp  layer.cpp  point.cpp  pointnode.cpp  relation.cpp  simfil-geometry.cpp  simfilexpressioncache.h  simfilgeometry.cpp  simfilutil.h  sourcedata.cpp  sourcedatalayer.cpp  sourcedatareference.cpp  stream.cpp  stringpool.cpp  tileid.cpp  validity.cpp
libs/pymapget/: CMakeLists.txt  __main__.py  py-mapget.cpp
libs/pymapget/binding/: py-client.h  py-datasource.h  py-layer.h  py-model.h  py-service.h  py-tileid.h
libs/service/: CMakeLists.txt
libs/service/include/mapget/service/: cache.h  config.h  datasource.h  locate.h  memcache.h  nullcache.h  rocksdbcache.h  service.h  sqlitecache.h
libs/service/src/: cache.cpp  config.cpp  datasource.cpp  locate.cpp  memcache.cpp  nullcache.cpp  rocksdbcache.cpp  service.cpp  sqlitecache.cpp
test/: CMakeLists.txt  datasource.cpp  info.cpp  model.cpp  test-datasource-server.cpp  test-file-logging.cpp  test-http-datasource.cpp  test-info.cpp  test-model.cpp
test/integration/: CMakeLists.txt  mapget-exec-datasource.bash  run-mapget-with-auto-launched-source.bash
test/unit/: CMakeLists.txt  test-cache.cpp  test-config.cpp  test-geojsonsource.cpp  test-http-datasource.cpp  test-http-service.cpp  test-info.cpp  test-model-geometry.cpp  test-model.cpp  test-service-ttl.cpp  test-simfil-geometry.cpp  utility.cpp  utility.h
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
